@@ -23,7 +23,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
         $condition = new ezcWorkflowConditionIsAnything;
 
         $this->assertTrue( $condition->evaluate( null ) );
-        $this->assertEquals( 'is anything', (string) $condition );
+        $this->assertEquals( 'is anything', $condition->__toString() );
     }
 
     public function testIsArray()
@@ -32,7 +32,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
 
         $this->assertTrue( $condition->evaluate( array() ) );
         $this->assertFalse( $condition->evaluate( null ) );
-        $this->assertEquals( 'is array', (string) $condition );
+        $this->assertEquals( 'is array', $condition->__toString() );
     }
 
     public function testIsBool()
@@ -42,7 +42,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
         $this->assertTrue( $condition->evaluate( true ) );
         $this->assertTrue( $condition->evaluate( false ) );
         $this->assertFalse( $condition->evaluate( null ) );
-        $this->assertEquals( 'is bool', (string) $condition );
+        $this->assertEquals( 'is bool', $condition->__toString() );
     }
 
     public function testIsTrue()
@@ -51,7 +51,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
 
         $this->assertTrue( $condition->evaluate( true ) );
         $this->assertFalse( $condition->evaluate( false ) );
-        $this->assertEquals( 'is true', (string) $condition );
+        $this->assertEquals( 'is true', $condition->__toString() );
     }
 
     public function testIsFalse()
@@ -60,7 +60,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
 
         $this->assertFalse( $condition->evaluate( true ) );
         $this->assertTrue( $condition->evaluate( false ) );
-        $this->assertEquals( 'is false', (string) $condition );
+        $this->assertEquals( 'is false', $condition->__toString() );
     }
 
     public function testIsFloat()
@@ -69,7 +69,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
 
         $this->assertTrue( $condition->evaluate( 0.0 ) );
         $this->assertFalse( $condition->evaluate( null ) );
-        $this->assertEquals( 'is float', (string) $condition );
+        $this->assertEquals( 'is float', $condition->__toString() );
     }
 
     public function testIsInteger()
@@ -78,7 +78,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
 
         $this->assertTrue( $condition->evaluate( 0 ) );
         $this->assertFalse( $condition->evaluate( null ) );
-        $this->assertEquals( 'is integer', (string) $condition );
+        $this->assertEquals( 'is integer', $condition->__toString() );
     }
 
     public function testIsObject()
@@ -87,7 +87,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
 
         $this->assertTrue( $condition->evaluate( new StdClass ) );
         $this->assertFalse( $condition->evaluate( null ) );
-        $this->assertEquals( 'is object', (string) $condition );
+        $this->assertEquals( 'is object', $condition->__toString() );
     }
 
     public function testIsString()
@@ -96,7 +96,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
 
         $this->assertTrue( $condition->evaluate( '' ) );
         $this->assertFalse( $condition->evaluate( null ) );
-        $this->assertEquals( 'is string', (string) $condition );
+        $this->assertEquals( 'is string', $condition->__toString() );
     }
 
     public function testIsEqual()
@@ -105,7 +105,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
 
         $this->assertTrue( $condition->evaluate( 2204 ) );
         $this->assertFalse( $condition->evaluate( 1978 ) );
-        $this->assertEquals( '== 2204', (string) $condition );
+        $this->assertEquals( '== 2204', $condition->__toString() );
     }
 
     public function testIsNotEqual()
@@ -114,7 +114,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
 
         $this->assertTrue( $condition->evaluate( 1978 ) );
         $this->assertFalse( $condition->evaluate( 2204 ) );
-        $this->assertEquals( '!= 2204', (string) $condition );
+        $this->assertEquals( '!= 2204', $condition->__toString() );
     }
 
     public function testIsLessThan()
@@ -123,7 +123,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
 
         $this->assertTrue( $condition->evaluate( 1978 ) );
         $this->assertFalse( $condition->evaluate( 2204 ) );
-        $this->assertEquals( '< 2204', (string) $condition );
+        $this->assertEquals( '< 2204', $condition->__toString() );
     }
 
     public function testIsNotLessThan()
@@ -134,7 +134,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
 
         $this->assertTrue( $condition->evaluate( 2204 ) );
         $this->assertFalse( $condition->evaluate( 1978 ) );
-        $this->assertEquals( '! < 2204', (string) $condition );
+        $this->assertEquals( '! < 2204', $condition->__toString() );
         $this->assertType( 'ezcWorkflowConditionIsLessThan', $condition->getCondition() );
     }
 
@@ -144,7 +144,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
 
         $this->assertTrue( $condition->evaluate( 2204 ) );
         $this->assertFalse( $condition->evaluate( 1978 ) );
-        $this->assertEquals( '> 1978', (string) $condition );
+        $this->assertEquals( '> 1978', $condition->__toString() );
     }
 
     public function testIsNotGreaterThan()
@@ -155,7 +155,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
 
         $this->assertTrue( $condition->evaluate( 1978 ) );
         $this->assertFalse( $condition->evaluate( 2204 ) );
-        $this->assertEquals( '! > 1978', (string) $condition );
+        $this->assertEquals( '! > 1978', $condition->__toString() );
         $this->assertType( 'ezcWorkflowConditionIsGreaterThan', $condition->getCondition() );
     }
 
@@ -166,7 +166,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
         $this->assertTrue( $condition->evaluate( 1 ) );
         $this->assertTrue( $condition->evaluate( 2 ) );
         $this->assertFalse( $condition->evaluate( 0 ) );
-        $this->assertEquals( '>= 1', (string) $condition );
+        $this->assertEquals( '>= 1', $condition->__toString() );
     }
 
     public function testIsEqualOrLessThan()
@@ -176,7 +176,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
         $this->assertTrue( $condition->evaluate( 1 ) );
         $this->assertTrue( $condition->evaluate( 0 ) );
         $this->assertFalse( $condition->evaluate( 2 ) );
-        $this->assertEquals( '<= 1', (string) $condition );
+        $this->assertEquals( '<= 1', $condition->__toString() );
     }
 
     public function testVariable()
@@ -237,7 +237,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
 
         $condition = new ezcWorkflowConditionAnd( array( $true, $true ) );
         $this->assertTrue( $condition->evaluate( true ) );
-        $this->assertEquals( '( is true && is true )', (string)$condition );
+        $this->assertEquals( '( is true && is true )', $condition->__toString() );
 
         $condition = new ezcWorkflowConditionAnd( array( $true, $true ) );
         $this->assertFalse( $condition->evaluate( false ) );
@@ -265,7 +265,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
         $condition = new ezcWorkflowConditionOr( array( $true, $true ) );
         $this->assertTrue( $condition->evaluate( true ) );
         $this->assertFalse( $condition->evaluate( false ) );
-        $this->assertEquals( '( is true || is true )', (string)$condition );
+        $this->assertEquals( '( is true || is true )', $condition->__toString() );
 
         $condition = new ezcWorkflowConditionOr( array( $true, $false ) );
         $this->assertTrue( $condition->evaluate( true ) );
@@ -280,7 +280,7 @@ class ezcWorkflowConditionTest extends ezcTestCase
         $condition = new ezcWorkflowConditionXor( array( $true, $false ) );
         $this->assertTrue( $condition->evaluate( true ) );
         $this->assertTrue( $condition->evaluate( false ) );
-        $this->assertEquals( '( is true XOR is false )', (string)$condition );
+        $this->assertEquals( '( is true XOR is false )', $condition->__toString() );
 
         $condition = new ezcWorkflowConditionXor( array( $true, $true ) );
         $this->assertFalse( $condition->evaluate( true ) );
