@@ -1,3 +1,5 @@
+- Added explicit calls to __toString() for PHP 5.1 compatiblity.
+
 - Changed default value for the ezcWorkflowExecutionListener::notify() method's
   $type argument from self::::INFO to ezcWorkflowExecutionListener::INFO to work
   around an issue in PHP 5.1's Reflection API that breaks the test suite.
